fix overlap

--- a/src/components/container/style.css
+++ b/src/components/container/style.css
@@ -2,7 +2,7 @@
 .container {
     border-radius: var(--border-radius-large);
     position: relative;
-    z-index: 40;
+    z-index: 4;
     width: 100%;
     box-sizing: border-box;
     height: auto;
