--- a/src/routes/about/style.css
+++ b/src/routes/about/style.css
@@ -2,7 +2,6 @@
 .about {
   position: relative;
   width: 100%;
-  min-height: 100vh;
   height: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -27,17 +26,17 @@
   height: 100%;
 }
 
+.aboutSection {
+  position: relative;
+  z-index: 100;
+}
+
 .aboutContent {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   gap: 1rem;
   height: 100%;
-}
-
-.aboutSection {
-  position: relative;
-  z-index: 100;
 }
 
 .spanColor {
